src/test/deca/context/invalid/objet/field_protected_access_notsub.deca


class A {
    protected int x;
}


{
    A a = new A();
    print(a.x);
}
